# Antachawy_Compiler

./: Readme.md  example  example.awi  pyproject.toml
antachawi/: compiler.py  consolehandler.py  main.py  optimizer.py  parser.py  scanner.py  semantic.py
inputs/errores_sintacticos/: error2.awi  error5.awi
