[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antachawi"
version = "0.0.1"
description = "Antachawi compiler package"
readme = "Readme.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Giomar Muñoz", email = "gmunozcu@unsa.edu.pe" },
    { name = "Melany Cahuana" },
    { name = "Andrea Cuela" }
]
dependencies = [
    "rich==13.7.1",
    "typer==0.12.3",
    "anytree==2.12.1",
    "colorama==0.4.6",
    "click==8.1.7",
    "pyparsing==3.1.2",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "pydot==2.0.0",
    "Pygments==2.18.0",
    "six==1.16.0",
    "graphviz==0.20.3",
    "tabulate==0.9.0"
]

[project.urls]
Homepage = "https://github.com/GiomarMC/Antachawy.git"
Repository = "https://github.com/GiomarMC/Antachawy.git"

[project.scripts]
antachawi = "antachawi.main:main"

[tool.hatch.build.targets.wheel]
packages = ["antachawi"] 